--- a/surface.html
+++ b/surface.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
     <head>
         <meta charset="utf-8" />
@@ -54,7 +54,7 @@
                 </div>
             </article>
 
-                  <!-- nada más -->
+                                <!-- nada más -->
                             </div>
                             <hr class="my-5" />
                         </div>
@@ -77,7 +77,7 @@
                                 <div class="col-4 col-md-6 col-lg-8 text-center">
                                     <svg version="1.1" id="humor" viewBox="0 0 200 10" xml:space="preserve">
                                         <line x1="0" y1="5" x2="200" y2="5" stroke="#fff" stroke-width="1" />
-                                        <circle cx="100" cy="5" r="2.5" fill="#fff" />
+                                        <circle cx="190" cy="5" r="2.5" fill="#fff" />
                                     </svg>
                                 </div>
                                 <div class="col-4 col-md-3 col-lg-2 text-end mt-1">Serious</div>
@@ -86,7 +86,7 @@
                                 <div class="col-4 col-md-6 col-lg-8 text-center">
                                     <svg version="1.1" id="formalidad" viewBox="0 0 200 10" xml:space="preserve">
                                         <line x1="0" y1="5" x2="200" y2="5" stroke="#fff" stroke-width="1" />
-                                        <circle cx="100" cy="5" r="2.5" fill="#fff" />
+                                        <circle cx="10" cy="5" r="2.5" fill="#fff" />
                                     </svg>
                                 </div>
                                 <div class="col-4 col-md-3 col-lg-2 text-end mt-1">Casual</div>
@@ -95,7 +95,7 @@
                                 <div class="col-4 col-md-6 col-lg-8 text-center">
                                     <svg version="1.1" id="respeto" viewBox="0 0 200 10" xml:space="preserve">
                                         <line x1="0" y1="5" x2="200" y2="5" stroke="#fff" />
-                                        <circle cx="100" cy="5" r="2.5" fill="#fff" />
+                                        <circle cx="190" cy="5" r="2.5" fill="#fff" />
                                     </svg>
                                 </div>
                                 <div class="col-4 col-md-3 col-lg-2 text-end mt-1">Irreverent</div>
@@ -104,7 +104,7 @@
                                 <div class="col-4 col-md-6 col-lg-8 text-center">
                                     <svg version="1.1" id="entusiasmo" viewBox="0 0 200 10" xml:space="preserve">
                                         <line x1="0" y1="5" x2="200" y2="5" stroke="#fff" />
-                                        <circle cx="100" cy="5" r="2.5" fill="#fff" />
+                                        <circle cx="150" cy="5" r="2.5" fill="#fff" />
                                     </svg>
                                 </div>
                                 <div class="col-4 col-md-3 col-lg-2 text-end mt-1">Matter-of-fact</div>
